kubernetes/web_server/web_deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: phonebook-app-deploy
  labels:
    app: phonebook-app-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      name: phonebook-app-pod
  template:
    metadata:
      name: phonebook-app-pod
      labels:
        name: phonebook-app-pod
      annotations:
        sidecar.istio.io/inject: "true"
    spec:
      containers:
        - name: phonebook-app
          resources:
          image: devenes/python_web_server:2
          ports:
            - containerPort: 80
