kubernetes/web_server/web_service.yml
apiVersion: v1
kind: Service
metadata:
  name: phonebook-service
  labels:
    name: phonebook-service
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 80
      name: http-web
      #nodePort: 30001
  selector:
    name: phonebook-app-pod
